finish ogr designing

--- a/Barış_Karakulak_192113059/Barış_Karakulak_192113059.csproj
+++ b/Barış_Karakulak_192113059/Barış_Karakulak_192113059.csproj
@@ -189,6 +189,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="KitapIslemleri\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
