delete new folder and added few folders

--- a/Barış_Karakulak_192113059/Barış_Karakulak_192113059.csproj
+++ b/Barış_Karakulak_192113059/Barış_Karakulak_192113059.csproj
@@ -190,7 +190,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="iadeEt\" />
     <Folder Include="KitapIslemleri\" />
+    <Folder Include="oduncAl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
