--- a/DataTransactionLayer/DataTransactionLayer.csproj
+++ b/DataTransactionLayer/DataTransactionLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BookContext.cs" />
     <Compile Include="BookProvider.cs" />
+    <Compile Include="LibraryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentContext.cs" />
     <Compile Include="StudentProvider.cs" />
