--- a/Barış_Karakulak_192113059/Barış_Karakulak_192113059.csproj
+++ b/Barış_Karakulak_192113059/Barış_Karakulak_192113059.csproj
@@ -77,6 +77,13 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZedGraph, Version=5.1.7.430, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Desktop\zedgraph_dll_v515\zedgraph_dll_v5.1.5\ZedGraph.dll</HintPath>
+    </Reference>
+    <Reference Include="ZedGraph.resources">
+      <HintPath>..\..\..\..\Desktop\zedgraph_dll_v515\zedgraph_dll_v5.1.5\tr\ZedGraph.resources.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Anasayfa\Anasayfa.cs">
@@ -182,6 +189,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="zed\zed.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="zed\zed.Designer.cs">
+      <DependentUpon>zed.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Anasayfa\Anasayfa.resx">
       <DependentUpon>Anasayfa.cs</DependentUpon>
     </EmbeddedResource>
@@ -240,6 +253,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="zed\zed.resx">
+      <DependentUpon>zed.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Database2DataSet.xsc">
       <DependentUpon>Database2DataSet.xsd</DependentUpon>
     </None>
@@ -280,6 +296,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
