--- a/Barış_Karakulak_192113059/App.config
+++ b/Barış_Karakulak_192113059/App.config
@@ -3,11 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Barış_Karakulak_192113059.Properties.Settings.Database2ConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database2.accdb"
-            providerName="System.Data.OleDb" />
+        <add name="Barış_Karakulak_192113059.Properties.Settings.Database2ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database2.accdb" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
 </configuration>
